// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow rendering when props.size is full 1`] = `
<button
  className="round_btn neutral full clickable"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="layout-fill layout-row layout-align-space-around-center"
  >
    <p
      className="content"
    >
      <span
        className="icon"
      >
        <img
          alt=""
          className="flex-none icon"
          src="FOO_ICON"
        />
      </span>
      FOO_TEXT
    </p>
  </div>
</button>
`;

exports[`shallow rendering when props.size is large 1`] = `
<button
  className="round_btn neutral large clickable"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="layout-fill layout-row layout-align-space-around-center"
  >
    <p
      className="content"
    >
      <span
        className="icon"
      >
        <img
          alt=""
          className="flex-none icon"
          src="FOO_ICON"
        />
      </span>
      FOO_TEXT
    </p>
  </div>
</button>
`;

exports[`shallow rendering when props.size is small 1`] = `
<button
  className="round_btn neutral small clickable"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="layout-fill layout-row layout-align-space-around-center"
  >
    <p
      className="content"
    >
      <span
        className="icon"
      >
        <img
          alt=""
          className="flex-none icon"
          src="FOO_ICON"
        />
      </span>
      FOO_TEXT
    </p>
  </div>
</button>
`;
